adding new command
